--- a/pom.xml
+++ b/pom.xml
@@ -6,17 +6,19 @@
 
     <groupId>io.github.willqi.raknet</groupId>
     <artifactId>RakNet</artifactId>
-    <packaging>pom</packaging>
     <version>1.0-SNAPSHOT</version>
-    <modules>
-        <module>api-definitions</module>
-        <module>server</module>
-        <module>client</module>
-    </modules>
 
     <properties>
-        <maven.compiler.source>8</maven.compiler.source>
-        <maven.compiler.target>8</maven.compiler.target>
+        <maven.compiler.source>17</maven.compiler.source>
+        <maven.compiler.target>17</maven.compiler.target>
     </properties>
+
+    <dependencies>
+        <dependency>
+            <groupId>io.netty</groupId>
+            <artifactId>netty-all</artifactId>
+            <version>4.1.24.Final</version>
+        </dependency>
+    </dependencies>
 
 </project>
